# waterline

./: .gitignore  .travis.yml  AUTHORS  COPYING  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  check_exported_symbols.sh  config.h.in  configure  configure.ac  lxpanelx.pc.in  waterline.pc.in
builds/archlinux/: PKGBUILD
data/: Makefile.am  Makefile.in  waterline.desktop
data/default/panels/: panel.in
data/defaults/applications/: terminal-emulator
data/template/: config  settings  top-level-domain-names
data/template/applications/: file-manager  task-manager  terminal-emulator  volume-control
data/template/panels/: bottom1.js  panel.panel.in
data/template/plugins/dclock/: formats
data/template/plugins/menu/: application_menu.js
data/template/plugins/taskbar/: task-menu
data/ui/: panel-pref.glade  panel-pref.ui
debian/: changelog  control  copyright  rules
debian/patches/: series
include/lxpanel/: plugin.h
include/lxpanelx/lxpanelx/: Xsupport.h  configparser.h  dbg.h  defaultapplications.h  fb_button.h  gdkrgba.h  global.h  gtkcompat.h  icon-grid.h  libfm.h  menu-cache-compat.h  misc.h  panel.h  paths.h  pixbuf-stuff.h  plugin.h  typedef.h
include/waterline/waterline/: Xsupport.h  Xsupport_atoms.h  commands.h  configparser.h  dbg.h  defaultapplications.h  ev.h  fb_button.h  global.h  gtkcompat.h  icon-grid.h  launch.h  libfm.h  libsmfm.h  menu-cache-compat.h  misc.h  panel.h  paths.h  pixbuf-stuff.h  plugin.h  symbol_visibility.h  typedef.h  wtl_button.h  x11_utils.h  x11_wrappers.h
m4-sde/: sde-with.m4
man/: Makefile.am  Makefile.in  lxpanel.1  lxpanelctl.1  lxpanelx.1  lxpanelx.xml  lxpanelxctl.1  lxpanelxctl.xml
po/: POTFILES.in  ru.po
src/: Makefile.am  Makefile.in  Xsupport.c  Xsupport.h  bg.c  bg.h  commands.c  commands.h  configparser.c  configparser.h  configurator.c  configurator_plugin_list.c  dbg.c  dbg.h  de.c  defaultapplications.c  defaultapplications.h  ev.c  ev.h  fb_button.c  gdkrgba.c  generic_config_dlg.c  global.h  gtk-run.c  gtkcompat.h  icon-grid.c  icon-grid.h  launch.c  libfm.c  libfm.h  libsmfm.c  lxpanelctl.c  lxpanelctl.h  lxpanelxctl.c  lxpanelxctl.h  menu-policy.c  menu-policy.h  misc.c  misc.h  openbox-integration.c  (+21 more)
src/libconfigurator/: Makefile.am  configurator.c  configurator_background.c  configurator_plugin_list.c
src/libexec/: Makefile.am  Makefile.in  iface-info
src/plugins/: Makefile.am  Makefile.in  dclock.c  dirmenu.c  launchbar.c  launchbutton.c  menu.c  menu_recent_documents.c  menu_xdg.c  pager.c  separator.c  space.c  taskbar.c  tray.c  wincmd.c
src/plugins/batt/: Makefile.am  Makefile.in  batt.c  batt_sys.c  batt_sys.h
src/plugins/battery_indicator/: Makefile.am  battery.c  battery.h  battery_indicator.c
src/plugins/cpu/: Makefile.am  Makefile.in  cpu.c
src/plugins/cpufreq/: Makefile.am  Makefile.in  cpufreq.c
src/plugins/deskno/: Makefile.am  Makefile.in  deskno.c
src/plugins/indicator/: Makefile.am  Makefile.in  indicator.c
src/plugins/kbled/: Makefile.am  Makefile.in  kbled.c
src/plugins/netstatus/: Makefile.am  Makefile.in  netstatus-dialog.c  netstatus-dialog.h  netstatus-enums.h  netstatus-icon.c  netstatus-icon.h  netstatus-iface.c  netstatus-iface.h  netstatus-sysdeps.c  netstatus-sysdeps.h  netstatus-util.c  netstatus-util.h  netstatus.c
src/plugins/notification_area/: Makefile.am  Makefile.in  fixedtip.c  fixedtip.h  main.c  na-tray-child.c  na-tray-child.h  na-tray-manager.c  na-tray-manager.h  na-tray.c  na-tray.h
src/plugins/pager/: Makefile.am  pager.c
src/plugins/show_desktop/: Makefile.am  show_desktop.c
src/plugins/taskbar/: Makefile.am  Makefile.in  taskbar.c
src/plugins/thermal/: Makefile.am  Makefile.in  thermal.c
src/plugins/volume/: Makefile.am  Makefile.in  volume-impl.c  volume-impl.h  volume.c
src/plugins/volumealsa/: Makefile.am  Makefile.in  backend.c  backend.h  backend_alsa.c  backend_asound.c  volumealsa.c
src/plugins/xkb/: Makefile.am  Makefile.in  xkb-plugin.c  xkb.c  xkb.h
src/plugins/xkb_groups/: Makefile.am  xkb.c  xkb.h  xkb_groups.c
src/plugins/xkb_leds/: Makefile.am  xkb_leds.c
src/plugins/xkb_locks/: Makefile.am  xkb_locks.c
src/plugins/xkbh/: Makefile.am  Makefile.in  xkbh-plugin.c  xkbh.c  xkbh.h
src/plugins/xkbh/xkeyboardconfig/: models.cfg
