template_config_DATA = \
	template/config \
	template/top-level-domain-names
template_configdir = $(datadir)/sde-config/sde/waterline/template

template_config_panel_DATA = \
	template/panels/bottom1.js
template_config_paneldir = $(datadir)/sde-config/sde/waterline/template/panels

template_applications_DATA = \
	template/applications/file-manager \
	template/applications/terminal-emulator \
	template/applications/volume-control
template_applicationsdir = $(datadir)/sde-config/sde/waterline/template/applications

template_plugins_dclock_DATA = \
	template/plugins/dclock/formats
template_plugins_dclockdir = $(datadir)/sde-config/sde/waterline/template/plugins/dclock/

template_plugins_taskbar_DATA = \
	template/plugins/taskbar/task-menu
template_plugins_taskbardir = $(datadir)/sde-config/sde/waterline/template/plugins/taskbar/

template_plugins_menu_DATA = \
	template/plugins/menu/application_menu.js
template_plugins_menudir = $(datadir)/sde-config/sde/waterline/template/plugins/menu/

applications_DATA = \
	waterline.desktop
applicationsdir = $(datadir)/applications

ui_DATA = \
	ui/panel-pref.ui \
	ui/launchbar.ui \
	ui/netstatus.ui
uidir=$(pkgdatadir)/ui


waterline_images_DATA = \
	images/my-computer.png \
	images/stock_volume.png \
	images/file-manager.png \
	images/gnome-logout.png \
	images/gnome-netstatus-0-24.png \
	images/gnome-netstatus-25-49.png \
	images/gnome-netstatus-50-74.png \
	images/gnome-netstatus-75-100.png \
	images/gnome-netstatus-disconn.png \
	images/gnome-netstatus-error.png \
	images/gnome-netstatus-idle.png \
	images/gnome-netstatus-rx.png \
	images/gnome-netstatus-txrx.png \
	images/gnome-netstatus-tx.png \
	images/background.png \
	images/volume.png \
	images/mute.png \
	images/ns-bothrs.png \
	images/ns-connected.png \
	images/ns-disconnect.png \
	images/ns-problem.png \
	images/ns-recvdata.png \
	images/ns-senddata.png \
	images/ns-lock.png \
	images/capslock-on.png \
	images/capslock-off.png \
	images/numlock-on.png \
	images/numlock-off.png \
	images/scrllock-on.png \
	images/scrllock-off.png \
	images/window-manager.png \
	images/clock.png \
	images/cpufreq-icon.png


waterline_imagesdir = $(pkgdatadir)/images



EXTRA_DIST = \
	template/panels/bottom1.js \
	$(waterline_DATA) \
	$(waterline_images_DATA) \
	$(ui_DATA) \
	$(template_config_DATA) \
	$(template_applications_DATA) \
	$(template_plugins_dclock_DATA) \
	$(template_plugins_taskbar_DATA)

